Revision history for Perl extension Devel-Mockify

{{$NEXT}}

1.3 2018-01-29T16:37:11Z
    - add static mock option thx to @dbucky for this idea

1.2 2018-01-11T10:14:54Z
    - fixing issue with 0 and '0' and "0" and undef

1.1 2018-01-11T08:47:55Z
    - allow optional new (thx dbucky)

1.0 2017-12-18T16:46:39Z
    - refactor cpanfile
    - go for one-dot versioning 1.0

0.10.3 2017-12-18T08:51:45Z
    - merge PR from manwar

0.10.2 2017-12-15T13:18:46Z
    - fix Isse object matcher dont match [#20]

0.10.1 2017-03-14T12:34:29Z
    - add method spy [#17]
    - fix issue typo in docu [#18]

0.10.0 2017-02-22T19:44:56Z
    - fix documentation and versionsnumber issues

0.9.4 2017-02-15T19:43:47Z
    - new chained mocksetup approach

0.9.3 2017-01-14T13:35:54Z
    - revison number
    - add meatcpan badge
    - fix kwalitee warnings

0.9 2017-01-06T14:07:50Z
    - initial version
    - initial release on CPAN
